--- a/style.css
+++ b/style.css
@@ -21,6 +21,8 @@ li { list-style: none;}
 padding: 10px 150px ;
 background-color: #F2F7F8;
 z-index: 1;
+position: fixed;
+width: 75%;
 }
 
 .navleft { display: flex;
@@ -52,9 +54,10 @@ margin-left: 5px;}
    .hero { display: flex;
    justify-content: center;
 align-items: center;
-padding:160px 150px 5em;
+padding:120px 150px 5em;
 gap: 20px;
-background-color: #F2F7F8;}
+background-color: #F2F7F8;
+}
 
 .heroleft p:first-child { background-color: #0089FF;
 padding: 10px;
@@ -274,12 +277,10 @@ position: relative;
       p { line-height: 16px;
          font-size: 14px;
          width: 230px;}
-      
       }
 
       .herogrid img { width: 180px;
       height: auto;}
-
 
 
       .automated1 , .fixed1 ,.goal1 ,.flexnaira1 , .flexdollar1 , .houseMoney1 
@@ -296,19 +297,161 @@ left: 55%;
 
 }
 
-
-
-
-
 .arrow img { width: 30px;
 height: auto;}
-
 
 .arrow { display: flex;
 align-items: center;
 gap: 5px;
 padding-bottom: 20px;
 }
+
+/* <!-- section 5--> */
+.sect5text { text-align: center;
+
+h1 { font-size: 51px;
+line-height: 64px;
+font-weight: 700;}
+
+
+p {  font-size: 24px;
+   line-height: 33px;
+color: rgba(29, 28, 28, 0.824);}
+}
+
+
+
+.sect5 { display: flex;
+   justify-content: space-between;
+padding: 70px 50px 0px 50px;
+margin: 50px 50px 200px;
+border-radius: 25px;
+background-color:#7913E5;}
+
+.sect5img img{ width:420px;
+height: auto;}
+
+.sect5left { width: 50%;
+display: flex;
+flex-direction: column;
+justify-content: space-between;
+color: white;
+
+
+h1 {font-size: 36px;
+   line-height: 50px;
+   font-weight: 700;
+padding-bottom: 50px;}
+
+
+p { font-size: 20pxpx;
+   line-height: 28px;
+   font-weight: 400;
+width: 240px;
+color: wheat;}
+
+}
+
+/* section 6 */
+.sect6 { text-align: center;
+   padding: 150px ;
+   background-color: #F2F7F8;
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-items: center;
+
+h1{font-size: 48px;
+   line-height: 64px;
+   font-weight: 700;
+   color: #122231;
+
+}
+
+p {font-size: 24px;
+   line-height: 33px;
+   font-weight: 400;
+   width: 33em;
+   margin: 0 auto;
+   padding-bottom: 50px;
+}
+
+}
+
+.sect6 video {width:740px;
+   height: 450px;
+border-radius: 25px;
+border: 10px solid white;
+object-fit: cover;}
+
+/* section 7 */
+.sect7 { display: flex;
+gap: 50px;
+align-items: center;
+justify-content: center;
+background-color: #F2F7F8;
+padding-bottom: 150px;
+flex-wrap: wrap-reverse;
+
+
+h1 { padding-bottom: 35px;
+   font-size: 33px;
+   line-height :41px; 
+   font-weight:400 ;
+width: 480px;
+}
+}
+
+.sect7img img{ max-width: 27em;
+height: auto;}
+
+.btn3 img { max-width: 20px;
+height: auto;}
+
+
+.sect7btn  { display: flex;
+gap: 15px;}
+
+.btn3 { padding: 12px;
+   border: 1px solid black;
+   border-radius: 15px;
+   display: flex;
+   align-items: center;
+   gap: 5px;
+}
+
+/* sponsors */
+.sponsors { padding-bottom: 200px;
+   background-color: whitesmoke;
+
+
+   h1 { line-height:41px ;
+   font-weight: 700;
+font-size:33px ;
+padding-bottom: 30px;
+text-align: center;}
+   }
+
+
+.sponsorsimg img { max-width: 120px;
+height: auto;}
+
+
+.sponsorsimg { display: grid;
+grid-template-columns: repeat(6,1fr);
+justify-content: center;
+align-items: center;
+padding-left: 100px;}
+
+/* footer */
+
+footer { display: grid;
+grid-template-columns: repeat(5 ,1fr);}
+
+footer img { width: 150px;}
+
+
+
 
 
 
@@ -326,7 +469,8 @@ margin: 0 auto;}
 
    .hamburger {display:block;}
    .navleft1 , .navright { display: none;}
-.navbar { padding:5px 20px 0;}
+.navbar { padding:5px 20px 0;
+width: 90%;}
 .hero { flex-wrap: wrap;}
 
 .hero { margin: 0 auto;
@@ -373,15 +517,85 @@ align-items: center;
  width: 350px;;
 }
 
-
 .abso { 
    bottom: -5px;;
    left: 50%;
+   }
+
+   .sect5 { flex-wrap: wrap;
+   align-items: center;
+   justify-content: center;
+padding: 20px 10px 0;
+margin: 15px;
+
+p { padding-bottom: 20px;}
+}
+   .sect5img img{ width: 300px;
+      height: 300px;}  
+
+.sect5left { 
+   width: 100%;
+
+   h1 { width:370px;
+   font-size: 30px ;}
+
+   p { width: 300px;
+   text-align: center;
+margin: 0 auto;}
+}
+.sect5left .arrow { margin: 0 auto;}
+
+
+.sect6 video {width: 380px;
+   height: 500px;
+}
+
+
+   .sect6 { 
    
+      h1 { width:300px;
+      font-size: 25px ;
+   line-height: 30px;
+margin: 0 auto;
+padding-bottom: 20px;}
+   
+      p { width: 400px;
+      text-align: center;
+   margin: 0 auto;
+padding-bottom: 30px;}
    }
 
 
+   .sect7img img{ max-width: 23em;
+      height: auto;
+   }
+
+   .sect7right h1 { 
+      width: 380px;
+         font-size: 33px;
+         line-height :41px; 
+         font-weight:400 ;
+      text-align: center;}
+
+      .sect7btn {justify-content: center;}  
 
 
+
+      .sponsorsimg { display: grid;
+      grid-template-columns: repeat(2 , 1fr);
+gap: 30px;
+justify-content: center;
+align-items: center;
+padding-right: 40px;
+}
+
+.sponsorsimg img { max-width: 200px;
+   height: auto;
+margin: 0 auto;}
    
+
+
+
+
+
 }
